--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://neondb_owner:npg_HizmNJ68cPMW@ep-frosty-field-a1ik3x3x-pooler.ap-southeast-1.aws.neon.tech/neondb
+DATABASE_URL=postgresql://username:password@ip-address/database-name
 BETTER_AUTH_SECRET=QVCmDlDyqQXwqjz1r7TBPQtVELbkTPGy
 BETTER_AUTH_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000
