--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://username:password@ip-address/database-name
-BETTER_AUTH_SECRET=QVCmDlDyqQXwqjz1r7TBPQtVELbkTPGy
+DATABASE_URL=postgresql://username:password@ip-address/database-name # neon database url
+BETTER_AUTH_SECRET=xxx # generate using `openssl rand -hex 32`
 BETTER_AUTH_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000
